--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link href="styles.css" rel="stylesheet">
+  <link href="kittycatcafe/styles.css" rel="stylesheet">
 <script src="/assets/jquery.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 </head>
