--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link href="kittycatcafe/styles.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="/assets/jquery.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 </head>
