--- a/2.html
+++ b/2.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-
-<link href="C:\Users\Kasia\Desktop\Coding\website\styles2.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style2.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 </head>
 <body>
