--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <ul>
-      <li><a href="Kitty">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Our Cats</a></li>
       <li><a href="#">House Rules</a></li>
         <li><a href="#">Contact Us</a></li>
