--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="styles.css">
 <script src="/assets/jquery.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+      <title> Kitty Cat Café </title> 
 </head>
 <body>
   <header>
