--- a/2.html
+++ b/2.html
@@ -3,6 +3,7 @@
 <head>
       <link rel="stylesheet" href="styles2.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+      <title>About</title>
 </head>
 <body>
   <header>
