--- a/2.html
+++ b/2.html
@@ -29,9 +29,9 @@
 <h2>We are here:</h2>
 
 
-<table class="media">
+<table>
   <tbody>
-    <tr class="fb">
+    <tr>
   <td><img src="https://rksmazur.pl/sites/default/files/tresci/2018/04/facebookk-236.png" height="80px"></td>
   <td>Kitty Cat Aberystwyth</td>
 </tr>
