--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <tbody>
       <tr>
     <td><img src="https://images.unsplash.com/photo-1510545724575-ca1a01b0cd1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height="300px"></td>
-    <td class="name">Christmas Cookies</br><small>Vegan, Gluten Free, Sugar free</br>£10</small></td>
+    <td class="name">Christmas Cat Cookies</br><small>Vegan, Gluten Free, Sugar free</br>£10</small></td>
   </tr>
   <tr>
     <td><img src="https://images.unsplash.com/photo-1518704512655-a5a68b5f0ce5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height="300px"></td>
-    <td class="name">Muffins</br><small>Vegan, Gluten Free</br>£10</small></td>
+    <td class="name">Meowffins</br><small>Vegan, Gluten Free</br>£10</small></td>
   </tr>
     <td><img src="https://images.unsplash.com/photo-1509474520651-53cf6a80536f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" height="300px"></td>
-    <td class="name">Doughnuts</br><small>Vegan</br>£10</small></td>
+    <td class="name">Purrfect Doughnuts</br><small>Vegan</br>£10</small></td>
   </tr>
 </tbody>
 </table>
